# TCC

./: README.md
api-actix/: Cargo.toml  diesel.toml
api-actix/src/: db.rs  main.rs  schema.rs
api-actix/src/configs/: auth.rs
api-actix/src/controllers/: categoria_controller.rs  cliente_controller.rs  home_controller.rs  mod.rs  pedido_controller.rs  produto_controller.rs
api-actix/src/dal/: categoria_dal.rs  cliente_dal.rs  mod.rs  pedido_dal.rs  produto_dal.rs
api-actix/src/middlewares/: is_authenticated.rs
api-actix/src/models/: categoria.rs  cliente.rs  login.rs  mod.rs  pedido.rs  produto.rs
api-actix/src/routes/: categoria_routes.rs  cliente_routes.rs  home_routes.rs  mod.rs  pedido_routes.rs  produto_routes.rs
api-actix/src/services/: categoria_service.rs  cliente_service.rs  home_service.rs  mod.rs  pedido_service.rs  produto_service.rs
api-actix/src/utils/: app_message.rs  hash_password.rs  mod.rs  tabela_frete.rs
api-actix/src/validations/: cliente_validations.rs  mod.rs
api-express/: package-lock.json  package.json
api-express/prisma/: schema.prisma
api-express/src/: server.js
api-express/src/configs/: auth.js
api-express/src/controllers/: categoria-controller.js  cliente-controller.js  home-controller.js  pedido-controller.js  produto-controller.js
api-express/src/dal/: categoria-dal.js  cliente-dal.js  pedido-dal.js  produto-dal.js
api-express/src/middlewares/: is-authenticated.js
api-gin/: go.mod  go.sum
api-gin/src/: main.go
teste/: amazon.js  config.js  metrics-processor.js  shopee.js  utils.js
(+66 files in other folders)
