[package]
name = "api-tcc-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
bcrypt = "0.17.0"
jsonwebtoken = "9.2"
chrono = {  version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "numeric", "r2d2"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4"] }
rand = "0.9.1"
lazy_static = "1.5.0"
futures-util = "0.3.31"
regex = "1.11.1"
validator = { version = "0.16", features = ["derive"] }
tokio = {  version = "1.44.2", features = ["full"] }

